<resources>
    <string name="app_name">Barattopoli</string>
    <string name="APP_NAME">BARATTOPOLI</string>
    <string name="login">Accedi</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_confirm">Conferma Password</string>
    <string name="register">Registrati</string>
    <string name="select_error">Necessario selezionare: </string>
    <string name="match_error">: devono coincidere</string>
    <string name="in_progress">…in progresso…</string>
    <string name="accept_privacy">Conferma presa visione</string>
    <string name="forgot_password">Ho dimenticato la password</string>
    <string name="Login">Login</string>
    <string name="Logout">Logout</string>
    <string name="Registration">Registrazione</string>
    <string name="error_email">inserisci una email</string>
    <string name="error_password">scegli una password di almeno 6 caratteri!</string>
    <string name="success">: azione avvenuta con successo</string>
    <string name="failure">: fallimento, qualcosa è andato storto</string>
    <string name="empty_text">: il testo non può essere vuoto!</string>
    <string name="Yes">Sì</string>
    <string name="No">No</string>
    <string name="From">da</string>
    <string name="To">a</string>
    <string name="CATEGORIES">CATEGORIE</string>
    <string name="RANGE">VALORE INDICATIVO</string>
    <string name="Tech">Tecnologia</string>
    <string name="Clothes">Abbigliamento</string>
    <string name="Handmade">Artigianato</string>
    <string name="Games">Giochi</string>
    <string name="House_and_garden">Casa e giardino</string>
    <string name="Food">Cibo</string>
    <string name="School">Istruzione</string>
    <string name="Fun">Divertimento</string>
    <string name="Service">Servizio</string>
    <string name="Item">Oggetto</string>
    <string name="Charity">Beneficenza</string>
    <string name="fai_la_tua_proposta">Fai la tua proposta</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="locazione_fisica">Locazione fisica dell\'oggetto</string>
    <string name="descrizione_dell_offerente">Descrizione dell\'offerente</string>
    <string name="text_placeholder">Placeholder (modify me)</string>
    <string name="avatar_desc">Avatar dell\'offerente</string>
    <string name="lorem_short">Lorem ipsum dolor sit amet.</string>
    <string name="Alert_insert_item">Confermi di voler inserire l\'oggetto o servizio?</string>
    <string name="Alert_take_new_picture">Se cambierai la foto, i campi finora selezionati torneranno ad essere vuoti. Procedere comunque?</string>
    <string name="range">%1$s %2$d %3$s %4$d</string>
    <string name="inserting_a_new_item">Inserimento di un nuovo oggetto o servizio nella tua bacheca</string>
    <string name="take_picture">Scatta una foto per il tuo oggetto o servizio</string>
    <string name="take_profile_picture">Scatta una foto profilo</string>
    <string name="insert_description">inserisci una descrizione</string>
    <string name="insert_title">inserisci un titolo</string>
    <string name="insert_location">inserisci il luogo</string>
    <string name="is_charity">è beneficienza</string>
    <string name="is_service">è un servizio</string>
    <string name="insert">inserisci</string>
    <string name="take_picture_user">scatta una foto profilo</string>
    <string name="non_mandatory_fields">campi non obbligatori</string>
    <string name="insert_name">inserisci il tuo nome</string>
    <string name="insert_surname">inserisci il tuo cognome</string>
    <string name="mandatory_fields">campi obbligatori</string>
    <string name="insert_username">scegli un soprannome</string>
    <string name="insert_email">inserisci la tua email</string>
    <string name="insert_password">scegli una password</string>
    <string name="confirm_password">inserici nuovamente la password scelta</string>
    <string name="insert_city">inserisci la città</string>
    <string name="insert_province">inserisci la provincia</string>
    <string name="insert_region">inserisci la regione</string>
    <string name="insert_country">inserisci la nazione</string>
    <string name="city">Città</string>
    <string name="province">Provincia</string>
    <string name="region">Regione</string>
    <string name="country">Nazione</string>
    <string name="wrong_choice">: scelta incorretta. Scegli fra una di queste:</string>
    <string name="understood">ho capito</string>
    <string name="delete_item">Elimina oggetto</string>
    <string name="objects">Oggetti</string>
    <string name="services">Servizi</string>
    <string name="charity">Beneficenza</string>
    <string name="chat">Chat</string>
    <string name="dashboard">Bacheca</string>
    <string name="exchanges">I tuoi baratti</string>
    <string name="notifications">Notifiche</string>
    <string name="text_preview">Text Preview</string>
    <string name="proposal_text">Proprietario</string>
    <string name="lorem_tiny">Lorem ipsum.</string>
    <string name="sample_mail">user@example.com</string>
    <string name="prefer_not_to">Preferisco di no</string>
    <string name="profile">Profilo</string>
    <string name="basic_image">iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNk+A8AAQUBAScY42YAAAAASUVORK5CYII=</string>
    <string name="blank_profile_pic">iVBORw0KGgoAAAANSUhEUgAAAHMAAAD6CAIAAAAdnu+hAAAAAXNSR0IArs4c6QAAAANzQklUCAgI2+FP4AAAIABJREFUeJx8vVm3JMdxJviZmUdk3lsooIgCSIALRGoZUiIl9Zmn+ZFz+pfNPHRr1KQAbgJBQSCFAmq5S0a4m82DuVtYRBY7Tp06eTMjfLF9cwv67//9/wZARMwMgJnNjEgAACgsAIgNwExiZmxgAwBVRbr8cQCgBkBEVJWKEIqZURFVNTOfC4AVzo/7aGY2k6itMDEzEWmt+SMTi9/gc6kqEbGBilhtPp0SmJmI/DZQMypmpqo+lC+ytdbXMNbT7x+fiaiSiaK1VkrZtpbuWaH+PRH5yL6F+FCmafKx4isRISIi8QX1n6w2YIKwQVULsS+uw5SaqjIzTNRURMyMp2LKXAwmRiTSsaVCZgYzIood+q9mpkSAAAIzrVpKMTNmxybMMEvxDTs0AdBUWITMZL95JeGxyEBJLICIYAbABmq3WQABIJBJQJQpyO9R1YknRxIzB9p8Sb794kh2NPpnAERiZtM0CXW0MAqxkYIdHrajDmZ2YgepQBxM1TpclOA77BuDBpRbawEghyAzA+IkaRMpkWjHel66DxX4GMumTDUO1fjJV9sYQhJEGjD1oTpKEjtmgs379WGnacorD7ACKKrq+CciX7ff1+UDEWPHOI7iuLOUAkBtBUAooObQbDDG1KmS4PM5lzE6UByslMg5wBTfmJkxlEhIYlWF2Ndjg/Azw5kZhJ3yOycNCKpTSgJTQDyjJNg848yR/VYxEmtI4q4VBwQlrhGZDrt1hIipmvr0SlBCYfHRhWd/Vq0BUAJZISYqYmZImBTeNpaniM07qrJEdgQYWwOKgYiUwCJoaty5x4nFp7ax1RihTy1iZHmW1loIIlXtAiHJ3IMIDtbBHmdxWwwFUBbPDGCep7iVmUMamJkVlkZq1sUosxExKONWWJQgLDAhombmVNkBJ0QJakH4CalyoKNgvT5I21QCC4sDDiAWI2JmScow5u0YYjBxaDMXKXFPkGoWC4HvUO+xtkwW/mWt1b9kNoBLhn0MGlsFdYKtbWEucPWqG48wseuTBiNAlZiNUJq2aZrUNOZuvIk8Znaln6fDEDJ5xXG/7zDwFB8yHcUgWYz6gwFov9M5tZQSqM0SYIeP1jIQu80zWCF/KKUwmyoBhUgLcxEhVTBzF5qqvvNg9i6LFXBqh5Yhr4yoUFFuNOyk4M1OvIAPG+sL0OQvQ5UFHTnow8Dq4HBTalDNQZ9kgHZ9NawIp9kwjzJHD3W3I3DsJX5GP5JaG5hoAA9Gd6aRQkR+5zzPtS4ikz/WrTF0HKoqmEW7aRkLAqAEpgmEgEvf8+AgVXXrNcu+vNYAUwhZSoZKaAK/jfYUmscJ6sYg8D5+6audpimWTcmEv1Zc2EtSXAnTPYi71eUmVt+LiBtJauaGtBJtCIGBiKZpWutlJtFh2x2s4iCEDeFMMpbFzDqg6QI6Vnagmmvl4I+HkY89hfo2QrDs3ASAiJZlub29rbA8WpaSwRkZ3AGgwPphhYcrdh0aTEQ228DHIpJaqw/BoNjSPM+kQ4SrBUW4qHrbHB3/HQp0vCFLvQBorD4w76LAadnvFDqCPu5c13We5wyC29tb//PExcwadUhda/PDgNjb2gd0xv9+v3Nb/NkhA2gpMjSmiWx6jKl7FyAlYhEOX3NQ+m4pSAylA5Rd7Coab1btAfNhil5D+fCIY+pgrrlSLqW4J5rJsOsWG1OrNt6sV7/hwEYBwWzVZFv1+n5L/uRgwVaKIzCRT2ttkhKmuJT+TGgSulpBhikl+znDncsmAfOa8DZtnt38kDNjwJ1GrrVO08TJk8zkcyBGK9sfgc4QJhmyAS8fLWQCX8UHkAhr/GSqKNh8YTAzGQr3XXVZQ92ElgAENu1ZSvH9bP6YqgvZ0DmdIag/kqWhg2NEKnZ+TqDKzT7fXv7J5zqdTjZiLtfYzQYyAGa6Hucv6f1sF/sUWXZlQXyI+ADCjC5nhZkgCgsYZSI60JRzuqDDIqPah0X6MiRyMHW3ycY9YQ9c24mZYf0b0U0ZZVmBJNPj11B9m2+iqO5w7FXitrX9djKUs372fWWL8JpiyrYmI1IjJspuHGkmAQxP12mt0HFNWQ4GQDsEjZxsi+3oxV3MDJeDFCaiYmTCADhNhBR8iJsPFJf30oN7RmZoV451PB54ivXnLzOmN4E5nFKEv2pcNjLZI8rlgFtgnTSwYawPZFtoJtz2A2i4B3ypMbrlvLdbssqKvWUlIwoQoMgbzsA9wDQEYowWO/JhIz57mP2A4AzNrJ0OnBHQjwH9nrEannzu0BWuuLKGtbKtMs8XD/qFpOtiemYW3ZmN2Iu5eDxURxaaMciB8WlcB3Azc1gv1wsmognbehwN/kjeUTx7IJS82rx9/xzucjk8Q0QuAVR3ARFHxTT21lmMNh/GQwdIUZX4aUMmkShUtqBfwDHjKX/IxIu3eQ3B6TGvU5CbYm+luG1Hg+pDOL4ViAfg5vsPk8Y9qlqYym56D6YncsuzatXN2mVWAE1Dd4M2IrpGWBvzisK4LzEz5gETPrX703kzIfcDXhkTBzYvxDDQkINqq/AcuBFgxS7nRHsXzj/YyBtlw4uHq4ZkPyTooziR+ki+49DmoRwytkM+9J2Ec8IkHiJIvmPgzMxmkrDP8v4p2TRHV72qB9ti6VlRIJH8jtYMJJsQI6JqzoXKNB0IcAKvI8fxVic7oJFBcbBJMJhpfDYgyTJmZumkFDzoO48Nl1Jof0G4wYy3vcVoB/ABwCScskbXyoqTRyCK7Onln+LmEHD9/5H9DIiH1maD0PB0Il6sCmAmkUG4QTohu3eYvtKZeXYiYjaRAev8Q6btvILD83kaXImnbAP5mIEY34CIzCREJApuOx6nkfOgvaWco7H5Q5a5IkJFIP17pGhvYQNAKMRKrGZGrCy73IHbggdRdiSjK7eCtjCjBkw70GLnB/lyrVLfCj5OZk2e75pm8+KYecLOcpywI5YJ7Mm77FnFXDFyCL4I2QCAMJqKCKmxeI5WAIBaIWbmMpHP4k/F+DNtQuwAxwNAsaennN4NdinMnkIcGmOfFAogOonZFeh15JRiqweghzmNSahuMdNtOu6UKwoBq7sSwy4OBgqhmdETs1zbeUSkMDYBurMTWqjBCrGaufgLn9DMiI68H7Nny/3ggAG76FdnggMeAkAbRIJadzETIHL0+z3n1bhcd2iuqtOgjkrmuUIAzKRkopu3pkIh+MLhCXT+JYstY3GaJiWwQdlzmk1EzKqIKIGJtRGwRXVjZDdgDkHnvNkcMg3aAjwh13YsfkB49kaOgEzDZWH3l+7M0/iKG0OFKll86YBzaBKRylGKBbnlHV7fkJFKI4ZpvH0mIqMSCCBWz4HmYcMuTCDr7Btxg8wo+WYAzBOyWstKIBaXggCd+jKwMpMeggPYm4QArHRCiIBWgFVEVLZv8udKO/WCPfs7Kfxv0J8XAEAhPV7ME0xM2cG6YUK6NRJX9ip51HkEBDJ2kTjJgRvfHEM+YTNmqWFmjdF4w+S1Bo+nYsMO00xT2TjLgVHbXz6aP54XgxQRzk/lffp0G0QSbdZa4waXeH6J7shQU64+JqJhUNOVxs5bU+0wYSKCsdvqO1rbl3fEh0oWZJ4R6CM4LCqZFY6auHjca9BiHYeQM5IAySs5MBBGBUaGYwfQIDQkWR+LDIAiEb4KeU7X6SbWdhCPhyXhmi128neCS4MA7l9irrxzIsIkLjEdmsHFHWkuMVW3HMTYpJcc+JrcETjMmO2q8Dt5uHbXtIk9Y2XJiCHWMl9iBLp8wCidyxHkGDaAFTT3l5RQvnN8IHahGc8AO36/3kYWc5UsE2ngPCyKg83kvzobrujucoAslnGQYo2B6RhOpWTibEaFamTqgiE6gqnlxeTQjG/EhWzmBuyNBE1p9gMc457dh/jbVWmsW1IqOKMoLC3RLvI3FfQ2hzrDgkaI4JrcsvDKJOYihZs1xooubRyLYVqIiGu8rL6zb9pay2Tl07kQQ</string>
</resources>