<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#aaa"
    tools:context=".InsertNewItemActivity">



    <ImageView
        android:id="@+id/image_container"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/blank_profile_picture" />
    <Button
        android:id="@+id/take_picture_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_container"
        android:text="@string/take_picture_user" />

    <LinearLayout
        android:id="@+id/bottom_navigator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintTop_toBottomOf="@id/take_picture_user"
        app:layout_constraintBottom_toTopOf="@id/bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/not_mandatory_fields"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:fontFamily="@font/inter_medium"
                android:paddingVertical="10dp"
                android:text="@string/non_mandatory_fields"
                android:textAlignment="center" />
            <EditText
                android:id="@+id/insert_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/insert_name" />

            <EditText
                android:id="@+id/insert_surname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/insert_surname" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mandatory_fields"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:fontFamily="@font/inter_medium"
                android:paddingVertical="10dp"
                android:text="@string/mandatory_fields"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/insert_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/insert_username" />

            <EditText
                android:id="@+id/insert_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/insert_email" />

            <EditText
                android:id="@+id/insert_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/insert_password" />
            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password" />
            <EditText
                android:id="@+id/insert_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/insert_country" />

            <EditText
                android:id="@+id/insert_region"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/insert_region" />
            <EditText
                android:id="@+id/insert_province"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/insert_province" />

            <EditText
                android:id="@+id/insert_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/insert_city" />

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintTop_toBottomOf="@id/bottom_navigator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:baselineAligned="false">

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>