<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#aaa"
    tools:context=".InsertNewItemActivity">



    <ImageView
        android:id="@+id/image_container"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/surface" />
    <Button
        android:id="@+id/take_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_container"
        android:text="@string/take_picture" />

    <LinearLayout
        android:id="@+id/bottom_navigator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/top_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:fontFamily="@font/inter_medium"
                android:paddingVertical="10dp"
                android:text="@string/CATEGORIES"
                android:textAlignment="center" />
            <CheckBox
                android:id="@+id/tech"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Tech" />
            <CheckBox
                android:id="@+id/fun"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Fun" />
            <CheckBox
                android:id="@+id/school"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/School" />
            <CheckBox
                android:id="@+id/House_and_garden"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/House_and_garden" />
            <CheckBox
                android:id="@+id/Handmade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Handmade" />
            <CheckBox
                android:id="@+id/Food"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Food" />
            <CheckBox
                android:id="@+id/Games"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Games" />
            <CheckBox
                android:id="@+id/Clothes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Clothes" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:fontFamily="@font/inter_medium"
                android:paddingVertical="10dp"
                android:text="@string/RANGE"
                android:textAlignment="center" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton android:id="@+id/range0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/range1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/range2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/range3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/range4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"/>
            </RadioGroup>

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/insert_description" />

            <EditText
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/insert_title" />
            <!-->
            <EditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/insert_location" />
            </!-->
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <CheckBox
                android:id="@+id/is_charity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/is_charity" />
            <CheckBox
                android:id="@+id/is_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/is_service" />

            <Button
                android:id="@+id/insert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/insert"/>



        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>